# OneDexProxy

./: .gitignore  Cargo.toml  README.md
assets/: swap.abi.json  swap.wasm
one_dex-swap-proxy/: Cargo.toml
one_dex-swap-proxy/src/: one_dex_swap_proxy.rs  proxy.rs
